frontend/tests/cases/positive/deriving/pushUnit.gr
foo : forall {k : Coeffect, c : k} . () [c] -> ()
foo = push @()

specialised : () [] -> ()
specialised = push @()