frontend/tests/cases/negative/constraints/multiRefinement.gr
foo : forall {n : Nat} . {n > 0, n == 0} => ()
foo = ()